# fen-rs

./: Cargo.toml  README.md
src/: board.rs  error.rs  lib.rs  pieces.rs  to_fen.rs
