[package]
name = "fen-rs"
description = "Forsyth-Edwards Notation parser"
repository = "https://github.com/Selyss/fen-rs"
license = "MIT"
keywords = ["chess", "fen", "fen-parser", "chess-engine", "forsyth-edwards"]
categories = [
    "parser-implementations",
    "parsing",
    "games",
    "science",
    "text-processing",
]
readme = "README.md"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
